fixed slider overlay font on mobile

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -24,3 +24,9 @@
         margin-top: 8rem;
     }
 }
+
+@media only screen and (width: 820px) and (height: 1180px) {
+    .portfolio-container {
+        padding: 0 1rem;
+    }
+}
