--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -111,7 +111,7 @@
 
 @media only screen and (max-width: 768px) {
     .overlay {
-        font-size: 1.2rem;
+        font-size: 1.2rem !important;
     }
 }
 
@@ -130,7 +130,7 @@
     }
 
     .overlay {
-        font-size: 0.65rem;
+        font-size: 0.65rem !important;
     }
 
     .overlay p {
@@ -153,7 +153,7 @@
     }
 
     .overlay {
-        font-size: 0.6rem;
+        font-size: 0.6rem !important;
     }
 }
 
@@ -171,7 +171,7 @@
     }
 
     .overlay {
-        font-size: 0.54rem;
+        font-size: 0.54rem !important;
     }
 
     .overlay p {
@@ -186,53 +186,20 @@
     }
 }
 
-@media only screen and (max-height: 1119px) {
+@media only screen and (min-width: 1244px) and (max-height: 1119px) {
     .overlay {
         font-size: 1rem;
     }
 }
 
-/* @media only screen and (min-width: 1425px) {
-    .slider-img {
-        width: 50%;
-        left: 25%;
-        top: 0;
-    }
+@media only screen and (width: 1280px) and (max-height: 720px) {
     .overlay {
-        width: 50%;
-        left: 25%;
-        top: 0;
+        font-size: 0.8rem;
     }
 }
 
-@media only screen and (min-width: 1500px) {
-    .slider-img {
-        width: 40%;
-        left: 30%;
-        top: 0;
-    }
-
+@media only screen and (width: 1280px) and (max-height: 800px) {
     .overlay {
-        width: 40%;
-        left: 30%;
-        top: 0;
+        font-size: 0.92rem;
     }
 }
-
-@media only screen and (min-width: 2000px) {
-    .slider-img {
-        width: 32%;
-        left: 34%;
-        height: 42vh;
-    }
-
-    .overlay {
-        width: 32%;
-        left: 34%;
-        height: 42vh;
-    }
-
-    .slider-info {
-        margin-top: 8rem;
-    }
-} */
